@@ -89,19 +89,59 @@
             <build>
                 <plugins>
                     <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>build-helper-maven-plugin</artifactId>
+                        <version>3.6.0</version>
+                        <executions>
+                            <execution>
+                                <id>parse-version</id>
+                                <goals>
+                                    <goal>parse-version</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-resources-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>copy-quarkus-app</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>copy-resources</goal>
+                                </goals>
+                                <configuration>
+                                    <outputDirectory>${project.build.directory}/jpackage-input</outputDirectory>
+                                    <resources>
+                                        <resource>
+                                            <directory>${project.build.directory}/quarkus-app</directory>
+                                            <includes>
+                                                <include>**/*</include>
+                                            </includes>
+                                        </resource>
+                                    </resources>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
                         <groupId>org.panteleyev</groupId>
                         <artifactId>jpackage-maven-plugin</artifactId>
                         <version>${jpackage-maven-plugin.version}</version>
                         <configuration>
-                            <name>UK Self-Employment Manager</name>
+                            <name>SelfEmploy</name>
                             <vendor>Self-Employment UK</vendor>
                             <description>Manage accounting and submit HMRC reports</description>
-                            <appVersion>${project.version}</appVersion>
-                            <mainClass>uk.selfemploy.app.Launcher</mainClass>
-                            <mainJar>self-employment-app-${project.version}.jar</mainJar>
+                            <appVersion>${parsedVersion.majorVersion}.${parsedVersion.minorVersion}.${parsedVersion.incrementalVersion}</appVersion>
+                            <input>${project.build.directory}/jpackage-input</input>
+                            <mainClass>io.quarkus.bootstrap.runner.QuarkusEntryPoint</mainClass>
+                            <mainJar>quarkus-run.jar</mainJar>
+                            <icon>${project.basedir}/../packaging/icon</icon>
                             <destination>${project.build.directory}/installer</destination>
                             <javaOptions>
                                 <option>-Dfile.encoding=UTF-8</option>
+                                <option>--add-opens=java.base/java.lang=ALL-UNNAMED</option>
                             </javaOptions>
                         </configuration>
                     </plugin>
